[package]
name = "stone"
edition.workspace = true
version.workspace = true
repository.workspace = true
default-run = "stone"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
walkdir = "2.3.2"
chrono = "0.4"
sqlparser = "0.50.0"
serde_json.workspace = true