[package]
name = "cli"
edition.workspace = true
version.workspace = true
repository.workspace = true
default-run = "cli"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.0", features = ["derive"] }
